# pcsaft_tesis_doctorado

./: PyomoPCSAFT.py  pyproject.toml
Pure_NonAssoc/: data_methane.json  ipopt.opt  methane_data.xlsx  param_est.py  psat_model.py
src/pcsaft_tesis_doctorado/: __init__.py
src/pcsaft_tesis_doctorado/Pure_NonAssoc/: density_model.py  hexane_test.py
tests/data/: data_methane.json
