[project]
name = "pcsaft-tesis-doctorado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Arturo Bastías-Barra", email = "aibastias@uc.cl" },
  { name = "Maximilian Fleckenstein", email = "maximilianfv@uc.cl" }
]
dependencies = []

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
